add prop decorator and slot

--- a/side-drawer/src/index.html
+++ b/side-drawer/src/index.html
@@ -9,6 +9,15 @@
     <script nomodule src="/build/side-drawer.js"></script>
   </head>
   <body>
-    
+    <side-drawer title="Main Header">
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Service</li>
+          <li>About Us</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
+    </side-drawer>
   </body>
 </html>
